--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,18 @@
   <groupId>com.davis</groupId>
   <artifactId>blue-folder-rest</artifactId>
   <version>1.0.0</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <packaging>jar</packaging>
 
   <name>blue-folder-rest</name>
