--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,36 @@
 
     <packaging>pom</packaging>
     <name>Blue-Folder :: Parent</name>
+    <properties>
+        <httpclient-osgi.version>4.5</httpclient-osgi.version>
+        <httpcore-osgi.version>4.4.1</httpcore-osgi.version>
+        <json.path.version>2.1.0</json.path.version>
+        <gson.version>2.3.1</gson.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <slf4j-log4j12.version>1.7.12</slf4j-log4j12.version>
+        <javax-servlet.version>3.0-alpha-1</javax-servlet.version>
+        <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
+        <cxf-rt-rs-security-sso-saml.version>3.1.3</cxf-rt-rs-security-sso-saml.version>
+        <cxf.version>3.1.4</cxf.version>
+        <geronimo-servlet_3.0_spec.version>1.0</geronimo-servlet_3.0_spec.version>
+        <cxf-bundle-jaxrs.version>2.7.8</cxf-bundle-jaxrs.version>
+        <cxf-rt-frontend-jaxrs.version>3.0.4</cxf-rt-frontend-jaxrs.version>
+        <jersey-common.version>2.22.1</jersey-common.version>
+        <com.jayway.rest-assured.version>2.8.0</com.jayway.rest-assured.version>
+        <tika.version>1.8</tika.version>
+        <servicemix.solrj.version>4.10.4_1</servicemix.solrj.version>
+        <servicemix.noggit.version>0.7_1</servicemix.noggit.version>
+        <jdk.version>1.8</jdk.version>
+        <groovy.version>2.4.5</groovy.version>
+        <groovy-org.codehaus.groovy-groovy-all.version>2.4.1</groovy-org.codehaus.groovy-groovy-all.version>
+        <shiro.version>1.2.4</shiro.version>
+        <guava.version>19.0</guava.version>
+        <http.core.version>4.4.1</http.core.version>
+        <http.client.version>4.5</http.client.version>
+        <json.smart.version>2.2</json.smart.version>
+        <apache.tika-java7.version>1.11</apache.tika-java7.version>
 
+    </properties>
 
     <modules>
         <module>assembly-kar</module>
