--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,33 @@
         <http.client.version>4.5</http.client.version>
         <json.smart.version>2.2</json.smart.version>
         <apache.tika-java7.version>1.11</apache.tika-java7.version>
-
+        <jdk.version>1.8</jdk.version>
+        <primary.ddf.version>2.8.2</primary.ddf.version>
+        <json.sanitizer.version>1.1</json.sanitizer.version>
+        <json.path.version>2.1.0</json.path.version>
+        <json.smart.version>2.2</json.smart.version>
+        <hamcrest-all.version>1.3</hamcrest-all.version>
+        <com.mikesamuel.json-sanitizer.version>[1.0,)</com.mikesamuel.json-sanitizer.version>
+        <slf4j-log4j12.version>1.7.12</slf4j-log4j12.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
+        <cxf-rt-frontend-jaxrs.version>3.0.4</cxf-rt-frontend-jaxrs.version>
+        <junit.version>4.12</junit.version>
+        <mockito.version>1.9.5</mockito.version>
+        <com.jayway.rest-assured.version>2.9.1</com.jayway.rest-assured.version>
+        <commons-io.version>2.1</commons-io.version>
+        <apache.commons-lang3.version>3.4</apache.commons-lang3.version>
+        <shiro.version>1.2.3</shiro.version>
+        <osgi-core-version>5.0.0</osgi-core-version>
+        <org-json-version>20140107</org-json-version>
+        <http-client-version>4.5</http-client-version>
+        <google-guava-version>15.0</google-guava-version>
+        <cxf-bundle-jaxrs-version>2.7.8</cxf-bundle-jaxrs-version>
+        <org-glassfish-jersey-common-version>2.22.1</org-glassfish-jersey-common-version>
+        <jersey-client-version>1.8</jersey-client-version>
+        <gson-version>2.3.1</gson-version>
+        <fsterxml-jackson-version>2.7.3</fsterxml-jackson-version>
+        <codehaus-jackson-version>1.9.11</codehaus-jackson-version>
     </properties>
 
     <modules>
