--- a/blue-folder/pom.xml
+++ b/blue-folder/pom.xml
@@ -183,7 +183,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>2.5.4</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
@@ -192,9 +192,7 @@
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}
                         </Bundle-SymbolicName>
                         <Private-Package>
-                            org.apache.commons.lang3, org.apache.commons.lang3.exception,
-                            org.apache.commons.lang3.text,
-                            org.apache.commons.lang3.text.translate,
+                            org.apache.commons.lang3.*,
                             com.davis.bluefolder.*,
                             com.google.gson.*,
                             com.jayway.restassured.*,
@@ -206,7 +204,7 @@
                             org.json.*
                         </Private-Package>
                         <Import-Package>
-                            *;resolution=:"optional"
+                            *;resolution:="optional"
                         </Import-Package>
                         <Export-Package>
                             com.davis.bluefolder.*
